# hdx-scraper-wfp-adam

./: .pre-commit-config.yaml  CLAUDE.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py  wfp.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml
config/: hdx_dataset_static.yml  project_configuration.yaml  project_configuration.yml
saved_data/: events-cyclones-alert-level-red.json
tests/: conftest.py  test_wfp.py
tests/fixtures/: cyclones-1000957.json  cyclones-1000961.json  cyclones-1000965.json  cyclones-1000966.json  cyclones-1000970.json  cyclones-1000972.json  cyclones-1000975.json  cyclones-1000976.json  cyclones-1000977.json  cyclones-1000983.json  cyclones-1000985.json  earthquakes-eq-at00rqnnhh.json  earthquakes-eq-at00rsi26z.json  earthquakes-eq-at00rsm3ae.json  earthquakes-eq-at00rtan8t.json  earthquakes-eq-at00ruvxj7.json  earthquakes-eq-at00ruxp51.json  earthquakes-eq-at00rwguar.json  earthquakes-eq-at00rx5zq9.json  earthquakes-eq-at00rxvmwl.json  earthquakes-eq-pt23008051.json  earthquakes-eq-pt23018001.json  earthquakes-eq-pt23060000.json  earthquakes-eq-pt23061000.json  earthquakes-eq-pt23077000.json  earthquakes-eq-pt23093000.json  earthquakes-eq-pt23130000.json  earthquakes-eq-pt23145000.json  earthquakes-eq-pt23166001.json  earthquakes-eq-pt23167002.json  earthquakes-eq-pt23207000.json  earthquakes-eq-us6000jiyj.json  earthquakes-eq-us6000jkpr.json  earthquakes-eq-us6000jllz.json  earthquakes-eq-us6000jlm1.json  earthquakes-eq-us6000jlqa.json  earthquakes-eq-us6000jlrc.json  earthquakes-eq-us6000jp76.json  earthquakes-eq-us6000jpl7.json  earthquakes-eq-us6000jqcn.json  (+28 more)
tests/fixtures/input/: 02-mdg-analysis-20260213-00.xlsx  1001204-10-adam-ts-1001204-10-pop-estimation.csv  1001268-18-adam-ts-1001268-18-pop-estimation.csv  adam-adam-eq-events-items-f-json-limit-10000-filter-published-true-and-published-at-timestamp-2025-01-01t00-00-00-sortby-published-at.json  adam-adam-fl-events-items-f-json-limit-10000-filter-cleared-yes-effective-2025-01-01t00-00-00-sortby-effective.json  adam-adam-ts-events-items-f-json-limit-10000-filter-published-true-and-published-at-timestamp-2025-01-01t00-00-00-sortby-published-at.json  cyclones-1001032.json  detail-us7000qtpj.geojson  detail-us7000si51.geojson  earthquakes-eq-us7000l9h2.json  earthquakes-eq-us7000l9ku.json  events-feed-start-date-2023-11-08-end-date-2023-11-17.json  floods-fl-20231109-eth-00.json  floods-fl-20231114-eth-01.json  floods-fl-20231114-som-00.json  sm-us7000l9h2-sm-us7000l9h2-pop-estimation.csv  sm-us7000l9ku-sm-us7000l9ku-pop-estimation.csv  (+1 more)
(+5 files in other folders)
